# sprachschule

./: docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: grammarian.py  moderator.py  quizzer.py  storyteller.py
app/api/: dependencies.py
app/api/v1/endpoints/: story.py
app/core/: config.py
app/schemas/: story.py
app/services/: story.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  schule.db
backend/alembic/: env.py
backend/alembic/versions/: 430e052f3b87_add_user_profile_fields.py  9d7bce1b2f8c_add_story_language_and_read_history.py
backend/app/: main.py
backend/app/agents/: AGENT_ARCHITECTURE.md  base.py  grammarian.py  main.py  moderator.py  quizzer.py  speech_coach.py  storyteller.py
backend/app/agents/prompts/: grammarian_correction.txt  grammarian_explanation.txt  moderator.txt  quiz_evaluation.txt  quiz_prompt.txt  storyteller.txt
backend/app/api/: dependencies.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  speech.py  story.py  urls.py
backend/app/core/: config.py  enums.py  security.py
backend/app/database/: models.py  session.py
backend/app/schemas/: __init__.py  interaction.py  story.py  user.py
backend/app/services/: audio.py
backend/tests/: conftest.py
tests/: conftest.py
web/: package-lock.json
web/src/app/: page.js
web/src/app/auth/: page.js
web/src/app/profile/: page.js
web/src/app/story/: page.js
web/src/components/: FloatingInput.js  StoryDisplay.js  StoryPlayer.js
web/src/components/auth/: Login.js
web/src/lib/: storyResponse.js
