[project]
name = "sprachschule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "numpy>=2.0.0",
    "piper-tts>=1.4.2",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "passlib[bcrypt]>=1.7.4",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.50",
    "torch>=2.12.0",
    "uvicorn>=0.48.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.13.4",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "alembic>=1.18.4",
]
